@@ -2,7 +2,7 @@
 <xs:schema xmlns:xs="http://www.w3.org/2001/XMLSchema">
 <!-- 
  * LanguageTool, a natural language style checker 
- * Copyright (c) Marcin Miłkowski, 2010 (http://www.languagetool.org)
+ * Copyright (c) Marcin Miłkowski, 2014 (http://www.languagetool.org)
  * 
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Lesser General Public
