@@ -18,6 +18,7 @@ bezsensowy=bezsensowny
 otocznia=otoczenia
 otocznie=otoczenie
 mięli=mieli
+maił=miał
 spadłą=spadła
 conajmniej=co najmniej
 wogle=w ogóle
@@ -41,6 +42,7 @@ prosze=proszę
 rząda=żąda
 sa=są
 sei=się
+sie=się
 ise=się
 ię=się
 chłopcowi=chłopcu
@@ -65,6 +67,7 @@ dzis=dziś
 dżaz=jazz
 duto=dłuto
 joystik=joystick
+juz=już
 lekaż=lekarz
 lekaży=lekarzy
 lekażach=lekarzach
