@@ -66,6 +66,10 @@ LanguageTool Change Log
   sequence that are not checked (useful to ignore punctuation, connectives, or not
   inflected words)
 
+-added new element <antipattern> (which can include <token>, <and>, <unify>, and <marker>),
+  useful for marking complex multiword exceptions in rules and rulegroups (a single
+  antipattern can be shared by multiple rules in the same group)
+
 -spell checking:
    -Immunized tokens are now ignored and don't cause a spelling error anymore;
     one can also add particular contextual expressions to ignored words by using
